<resources>
    <string name="app_name">My Notes</string>
    <string name="add_activity_title">Edit Note</string>
    <string name="search_hint">Search</string>
    <string name="save_menu_item">save</string>
    <string name="search_menu_item">Search</string>
    <string name="delete_all_menu_item">Delete All</string>
    <string name="about_me_menu_item">About Me</string>
    <string name="delete_failed_msg">delete failed</string>
    <string name="delete_success_msg">note deleted</string>
    <string name="do_failed_msg">failed, please try again!</string>
    <string name="job_done_msg">job done!</string>
    <string name="job_undone_msg">job undone!</string>
    <string name="todo_frag_title">To-do</string>
    <string name="notes_frag_title">Notes</string>
    <string name="mark_frag_title">Marked</string>
    <string name="tv_no_mark">no marked notes \n\n\n\n\n swipe to delete \n\n do or undo the job by long click</string>
    <string name="tv_no_note">no notes \n\n\n\n\n swipe to delete \n\n do or undo the job by long click</string>
    <string name="tv_no_todo">no todo \n\n\n\n\n swipe to delete \n\n do or undo the job by long click</string>
    <string name="tv_no_result">no result found</string>
    <string name="undo_msg">UNDO</string>
    <string name="lang_farsi">فارسی</string>
    <string name="lang_english">English</string>
    <string name="m_languages">-----    language   -----</string>
</resources>
